--- a/resume.html
+++ b/resume.html
@@ -29,9 +29,9 @@ permalink: /resume2/
     <h2>WEB DEVELOPMENT EXPERIENCE</h2>
     <h3>General Assembly, Web Development Immersive</h3>
     <p>Full-stack web development program focused on common best practices in object-oriented programming, MVC frameworks, data modeling, and test-driven development. Developed a portfolio of individual and collaborative projects to include:</p>
-    <h4><a src="https://wdi-recipe-box.herokuapp.com/">RecipeBox</a> - Solo Project</h4>
+    <h4><a href="https://wdi-recipe-box.herokuapp.com/">RecipeBox</a> - Solo Project</h4>
     <p>Used Ruby on Rails to create a app where I set up my own user 		authentication to let user’s have CRUD functionality with their recipes 		and comments, as well as see all user’s recipes.  You can also search by 	ingredient for recipes.</p>
-    <h4><a src="https://trip-me.herokuapp.com/">Trip.Me</a> - Collaborative Project</h4>
+    <h4><a href="https://trip-me.herokuapp.com/">Trip.Me</a> - Collaborative Project</h4>
     <p>Worked in a group setting with a UX Designer.  Focused on the front-end of the design collaborating with teammates using an agile 		approach, adapting our app from feedback as the project moved forward.</p>
     <h2>WORK EXPERIENCE</h2>
     <h3>Randstad Managed Services </h3>
