--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Resume
-permalink: /resume2/
+permalink: /resume/
 ---
 <div class="resume_wrapper">
   <div class="objective">
