--- a/about.html
+++ b/about.html
@@ -12,17 +12,29 @@ permalink: /about/
   <img src="../images/clark-kent-mod.png" />
 </div>
 
-  Hello and Welcome!  My name is Ryan Kahle and am a recent graduate of [General Assembly's](https://generalassemb.ly/education/web-development-immersive), Washington, D.C, Web Development Immersive program.  I am a full-stack web developer who loves design and is interested in building
-  beautify websites with efficient and well-thought out code.
-
-  I got interested in Web Development after looking for a career switch and asking myself what I really wanted.  My answers, I wanted to:
-
-  - learn a craft
-  - build things!
-  - work with interesting people
-  - give back
-  - indulge my creativity
-
-  This site contains some of my past projects and experiences with technology.  During the course I not only developed coding skills but also started breaking down how I learn best, and part of learning for me is writing.  Here I share my continuation of that process in the hopes that these blog posts prove useful to others and I can give back some of what I gained from other developers.
-
-I currently live in Arlington, Va with my wife, daughter and crazy dog.  Please if you find anything interesting or have any questions, drop me a line.
+<h3>I have been Clark Kent for Halloween five times</h3>
+<div class="about-main">
+  <div class="about-main-left">
+    <ul>
+      <li>Father</li>
+      <li>Husband</li>
+      <li>Dog Lover</li>
+      <li>Planner</li>
+      <li>Creator</li>
+      <li>Independent</li>
+      <li>Team Player</li>
+      <li>Adventurer</li>
+      <li>Wine Guy</li>
+      <li>Writer</li>
+    </ul>
+  </div>
+  <div class="about-main-right">
+    <p>
+        I got interested in Web Development after looking for a career switch
+        and asking myself what I really wanted.  My answers, I wanted to: learn a craft,
+        build things(!), work with passionate people, give back and be creative.
+        This site contains some of my past projects and experiences with technology.
+        If you would like to get a hold of me, my info is below.
+    </p>
+  </div>
+</div>
