finished draft about

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ permalink: /about/
   <img src="../images/clark-kent-mod.png" />
 </div>
 
-<h3>I have been Clark Kent for Halloween five times</h3>
+<h3 class="clark-kent">I have been Clark Kent for Halloween five times</h3>
 <div class="about-main">
   <div class="about-main-left">
     <ul>
@@ -36,5 +36,6 @@ permalink: /about/
         This site contains some of my past projects and experiences with technology.
         If you would like to get a hold of me, my info is below.
     </p>
+    <p>I finally chose a front room on the third floor, because this brought me nearer to Dejah Thoris, whose apartment was on the second floor of the adjoining building, and it flashed upon me that I could rig up some means of communication whereby she might signal me in case she needed either my services or my protection.</p>
   </div>
 </div>
