finished porfolio draftt

--- a/about.html
+++ b/about.html
@@ -1,12 +1,8 @@
 ---
-layout: default
+layout: page
 title: About
 permalink: /about/
 ---
-
-<div class="about-header">
-  <h2>About</h2>
-</div>
 
 <div class="clark-kent">
   <img src="../images/clark-kent-mod.png" />
