--- a/portfolio.html
+++ b/portfolio.html
@@ -3,34 +3,48 @@ layout: page
 title: Portfolio
 permalink: /portfolio/
 ---
+<section class="section-about">
+  <div class="about-row">
+    <div class="project">
+      <div class="memory project-pic"></div>
+      <a href="http://ryan-321.github.io/Memory/">
+        <h3>Memory</h3>
+      </a>
+      <a href="https://github.com/Ryan-321/Memory">
+        <p>Github Repo</p>
+      </a>
+    </div>
 
-<div class="project">
-<h2>Memory</h2>
-<p>My first project at General Assembly.  Focusing on JS/Jquery and CSS3.
-I put all of the JS/Jquery into a single object.</p>
-<a href="http://ryan-321.github.io/Memory/">Project 1</a> -
-<a href="https://github.com/Ryan-321/Memory">Github Repo</a>
-</div>
+    <div class="project">
+      <div class="recipe project-pic"></div>
+      <a href="https://wdi-recipe-box.herokuapp.com/">
+        <h3>Recipe Box</h3>
+      </a>
+      <a href="https://github.com/Ryan-321/recipe_box">
+        <p>Github Repo</p>
+      </a>
+    </div>
+  </div>
 
-<div class="project">
-<h2>Recipe Box</h2>
-<p>Built this app with Ruby on Rails.  Wrote user authentication myself.
-Currently working on switching this project over to MEAN stack.</p>
-<a href="https://wdi-recipe-box.herokuapp.com/">Project 2</a> -
-<a href="https://github.com/Ryan-321/recipe_box">Github Repo</a>
-</div>
+  <div class="about-row">
+    <div class="project">
+      <div class="trip project-pic"></div>
+      <a href="https://trip-me.herokuapp.com/">
+        <h3>Trip.me</h3>
+      </a>
+        <a href="https://github.com/alexbannon/trip.me">
+          <p>Github Repo</p>
+        </a>
+    </div>
 
-<div class="project">
-<h2>Trip.me</h2>
-<p>Group project done in Rails. Responsible for front-end design, but was involved in all aspects.  Project completed in a 4 day sprint.</p>
-<a href="https://trip-me.herokuapp.com/">Collab Project</a> -
-<a href="https://github.com/alexbannon/trip.me">Github Repo</a>
-</div>
-
-<div class="project">
-<h2>Avengers Bootstrap</h2>
-<p>Used to sharpen my Bootstrap skills.  Site has a basic layout with generic Bootstrap designs.
-Used a different feature of Bootstrap on each page and made it responsive.</p>
-<a href="https://avengersrails.herokuapp.com">Bootstrap Example</a> -
-<a href="https://github.com/Ryan-321/avengers-bootstrap">Github Repo</a>
-</div>
+    <div class="project">
+      <div class="avengers project-pic"></div>
+      <a href="https://avengersrails.herokuapp.com">
+        <h3>Avengers Bootstrap</h3>
+      </a>
+      <a href="https://github.com/Ryan-321/avengers-bootstrap">
+        <p>Github Repo</p>
+      </a>
+    </div>
+  </div>
+</section>
