started resume draft

--- a/resume.html
+++ b/resume.html
@@ -1,40 +1,70 @@
 ---
-layout: default
+layout: page
 title: Resume
 permalink: /resume/
 ---
-<div class="resume_wrapper">
+<div class="resume-wrapper">
   <div class="objective">
     <h2>OBJECTIVE</h2>
     <p>Strong ability to prioritize and manage time on projects and follow a natural workflow with a methodical and systematic approach. Collaborative and adaptable in an effort to maintain an agile process while embracing the changes in technology and the opinions of others. Passionate about writing scalable and well-thought out code with an emphasis on user experience and front-end technologies to meet and exceed goals.</p>
   </div>
   <div class="skills">
     <h2>TECH SKILLS:</h2>
-    <h3>Databases:</h3>
-    <p>PostgresSQL</p>
-    <h3>Languages &amp; Frameworks:</h3>
-    <p>Ruby, Rails, Sinatra, Active Record, JavaScript, Express, jQuery, AJAX, API Integration, JSON, HTML5, CSS3, Sass, Bootstrap, Photoshop, Angular</p>
-    <h3>Management &amp; Deployment:</h3>
-    <p>RSpec, Git, GitHub, Heroku, Command Line</p>
-    <h3>Methodologies:</h3>
-    <p>Object Oriented Programming, MVC Pattern, Test-Driven Development, Responsive Design, ERDs, Authentication, User Stories, SCRUM, Wire-framing, Agile Development</p>
+    <ul>
+      <li class="li-skills">
+        <h3>Databases:</h3>
+        <aside>
+          <p>
+            Postgresql
+          </p>
+        </aside>
+      </li>
+      <li class="li-skills">
+        <h3>Languages &amp; Frameworks:</h3>
+        <aside>
+          <p>
+            Ruby, Rails, Sinatra, Active Record, JavaScript, Express, jQuery, AJAX, API Integration, JSON, HTML5, CSS3, Sass, Bootstrap, Photoshop, Angular
+          </p>
+        </aside>
+      </li>
+      <li class="li-skills">
+        <h3>Management &amp; Deployment:</h3>
+        <aside>
+          <p>
+            RSpec, Git, GitHub, Heroku, Command Line
+          </p>
+        </aside>
+      </li>
+      <li class="li-skills">
+        <h3>Methodologies:</h3>
+        <aside>
+          <p>
+            Object Oriented Programming, MVC Pattern, Test-Driven Development, Responsive Design, ERDs, Authentication, User Stories, SCRUM, Wire-framing, Agile Development
+          </p>
+        </aside>
+      </li>
+    </ul>
+  </div>
+  <div class="education">
     <h2>EDUCATION:</h2>
     <p>General Assembly, Web Development Immersive, 2015</p>
     <p>George Mason University, Web Design and Development, 2014</p>
     <p>Virginia Wesleyan College, B.A. 2003</p>
-    <h2>INTERESTS:</h2>
-    <p>Chess, Reading, Writing, Architecture, Sports, Photography, Gardening and amateur handyman</p>
   </div>
-  <div class="experience">
+  <div class="web-experience">
     <h2>WEB DEVELOPMENT EXPERIENCE</h2>
     <h3>General Assembly, Web Development Immersive</h3>
     <p>Full-stack web development program focused on common best practices in object-oriented programming, MVC frameworks, data modeling, and test-driven development.</p>
     <p><a href="/../portfolio">Please see Portfolio to view projects</a></p>
+  </div>
+  <div class="work-experience">
     <h2>WORK EXPERIENCE</h2>
     <h3>Randstad Managed Services </h3>
     <p class="title">Document Processor - <span>May 2015-September 2014</span></p>
     <ul>
-      <li>Maintained relationships with store managers and employees, organized deliveries and promotions</li>
+      <li>
+        Maintained relationships with store managers and employees, organized deliveries and promotions
+      </li>
     </ul>
     <h3>Red, White and Bleu</h3>
     <p class="title">Merchandiser - <span>February 2011-May 2011</span></p>
@@ -44,11 +74,17 @@ permalink: /resume/
     <h3>Primary Residential Mortgage, Inc.</h3>
     <p class="title">Loan Processor - <span>2003-January 2011</span></p>
     <ul>
-      <li>Collaborated with Account Executives, Loan Officers and all levels of Management</li>
-      <li>Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow</li>
-      <li>Monitored and adapted to new industry regulations with immediate application for loan quality</li>
+      <li>
+        Collaborated with Account Executives, Loan Officers and all levels of Management</li>
+      <li>
+        Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow
+      </li>
+      <li>
+        Monitored and adapted to new industry regulations with immediate application for loan quality
+      </li>
     </ul>
-
   </div>
+  <h2>INTERESTS:</h2>
+  <p>Chess, Reading, Writing, Architecture, Sports, Photography, Gardening and amateur handyman</p>
 
 </div>
