--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,9 @@ permalink: /portfolio/
 <section class="section-about">
   <div class="about-row">
     <div class="project">
-      <div class="memory project-pic"></div>
+      <div class="project-pic">
+        <img src="/images/memory.png" alt="Memory Project">
+      </div>
       <a href="http://ryan-321.github.io/Memory/">
         <h3>Memory</h3>
       </a>
@@ -16,7 +18,9 @@ permalink: /portfolio/
     </div>
 
     <div class="project">
-      <div class="recipe project-pic"></div>
+      <div class="project-pic">
+        <img src="/images/recipeB.png" alt="Recipe Box Project">
+      </div>
       <a href="https://wdi-recipe-box.herokuapp.com/">
         <h3>Recipe Box</h3>
       </a>
@@ -28,7 +32,9 @@ permalink: /portfolio/
 
   <div class="about-row">
     <div class="project">
-      <div class="trip project-pic"></div>
+      <div class="project-pic">
+        <img src="/images/trip.png" alt="Trip.me Project">
+      </div>
       <a href="https://trip-me.herokuapp.com/">
         <h3>Trip.me</h3>
       </a>
@@ -38,7 +44,9 @@ permalink: /portfolio/
     </div>
 
     <div class="project">
-      <div class="avengers project-pic"></div>
+      <div class="avengers project-pic">
+        <img src="/images/avengers.png" alt="Avengers Bootstrap Project">
+      </div>
       <a href="https://avengersrails.herokuapp.com">
         <h3>Avengers Bootstrap</h3>
       </a>
