--- a/resume.html
+++ b/resume.html
@@ -59,30 +59,38 @@ permalink: /resume/
   </div>
   <div class="work-experience">
     <h2>WORK EXPERIENCE</h2>
-    <h3>Randstad Managed Services </h3>
-    <p class="title">Document Processor - <span>May 2015-September 2014</span></p>
     <ul>
-      <li>
-        Maintained relationships with store managers and employees, organized deliveries and promotions
+      <li class="work-exp-li">
+        <h3>Randstad Managed Services </h3>
+        <p>Document Processor &mdash; <span>May 2014&ndash;September 2014</span></p>
+        <p>&ndash; Merged Salesforce accounts with K-12 software </p>
       </li>
-    </ul>
-    <h3>Red, White and Bleu</h3>
-    <p class="title">Merchandiser - <span>February 2011-May 2011</span></p>
-    <ul>
-      <li> Conducted weekly wine tastings events and cash account reconciliation</li>
-    </ul>
-    <h3>Primary Residential Mortgage, Inc.</h3>
-    <p class="title">Loan Processor - <span>2003-January 2011</span></p>
-    <ul>
-      <li>
-        Collaborated with Account Executives, Loan Officers and all levels of Management</li>
-      <li>
-        Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow
+      <li class="work-exp-li">
+        <h3>Republic National Distributing Co.</h3>
+        <p>Merchandiser &mdash; <span>May 2011&ndash;April 2014</span></p>
+        <p>&ndash; Maintained relationships with store managers and employees, organized deliveries and promotions</p>
       </li>
-      <li>
-        Monitored and adapted to new industry regulations with immediate application for loan quality
+      <li class="work-exp-li">
+        <h3>Red, White, and Bleu</h3>
+        <p>Team Member &mdash; <span>February 2011&ndash;May 2011</span></p>
+        <p>&ndash; Conducted weekly wine tastings events and cash account reconciliation</p>
       </li>
-    </ul>
+      <li class="work-exp-li">
+        <h3>Primary Residential Mortgage, Inc.</h3>
+        <p>Loan Processor &mdash; <span>2003&ndash;January 2011</span></p>
+        <ul>
+          <li>
+            &ndash; Collaborated with Account Executives, Loan Officers and all levels of Management
+          </li>
+          <li>
+            &ndash; Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow
+          </li>
+          <li>
+            	&ndash; Monitored and adapted to new industry regulations with immediate application for loan quality
+          </li>
+        </ul>
+      </li>
+      </ul>
   </div>
   <h2>INTERESTS:</h2>
   <p>Chess, Reading, Writing, Architecture, Sports, Photography, Gardening and amateur handyman</p>
