--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@ permalink: /resume/
   <div class="skills">
     <h2>TECH SKILLS:</h2>
     <ul>
-      <li class="li-skills">
+      <li class="skills-li">
         <h3>Databases:</h3>
         <aside>
           <p>
@@ -19,15 +19,15 @@ permalink: /resume/
           </p>
         </aside>
       </li>
-      <li class="li-skills">
+      <li class="skills-li">
         <h3>Languages &amp; Frameworks:</h3>
         <aside>
           <p>
-            Ruby, Rails, Sinatra, Active Record, JavaScript, Express, jQuery, AJAX, API Integration, JSON, HTML5, CSS3, Sass, Bootstrap, Photoshop, Angular
+            Ruby, Rails, Sinatra, JavaScript, Express, jQuery, HTML5, CSS3, Sass, Bootstrap, Photoshop, Affinity, Angular, Wordpress, PHP
           </p>
         </aside>
       </li>
-      <li class="li-skills">
+      <li class="skills-li">
         <h3>Management &amp; Deployment:</h3>
         <aside>
           <p>
@@ -35,21 +35,15 @@ permalink: /resume/
           </p>
         </aside>
       </li>
-      <li class="li-skills">
+      <li class="skills-li">
         <h3>Methodologies:</h3>
         <aside>
           <p>
-            Object Oriented Programming, MVC Pattern, Test-Driven Development, Responsive Design, ERDs, Authentication, User Stories, SCRUM, Wire-framing, Agile Development
+            OOP, MVC,TDD, Responsive Design, ERDs, User Stories, SCRUM, Wire-framing, Agile Development
           </p>
         </aside>
       </li>
     </ul>
-  </div>
-  <div class="education">
-    <h2>EDUCATION:</h2>
-    <p>General Assembly, Web Development Immersive, 2015</p>
-    <p>George Mason University, Web Design and Development, 2014</p>
-    <p>Virginia Wesleyan College, B.A. 2003</p>
   </div>
   <div class="web-experience">
     <h2>WEB DEVELOPMENT EXPERIENCE</h2>
@@ -62,35 +56,58 @@ permalink: /resume/
     <ul>
       <li class="work-exp-li">
         <h3>Randstad Managed Services </h3>
-        <p>Document Processor &mdash; <span>May 2014&ndash;September 2014</span></p>
-        <p>&ndash; Merged Salesforce accounts with K-12 software </p>
+        <p class="title">Document Processor &mdash; <span>May 2014&ndash;September 2014</span></p>
+        <p>Merged Salesforce accounts with K-12 software </p>
       </li>
       <li class="work-exp-li">
         <h3>Republic National Distributing Co.</h3>
-        <p>Merchandiser &mdash; <span>May 2011&ndash;April 2014</span></p>
-        <p>&ndash; Maintained relationships with store managers and employees, organized deliveries and promotions</p>
+        <p class="title">Merchandiser &mdash; <span>May 2011&ndash;April 2014</span></p>
+        <p>Maintained relationships with store managers and employees, organized deliveries and promotions</p>
       </li>
       <li class="work-exp-li">
         <h3>Red, White, and Bleu</h3>
-        <p>Team Member &mdash; <span>February 2011&ndash;May 2011</span></p>
-        <p>&ndash; Conducted weekly wine tastings events and cash account reconciliation</p>
+        <p class="title">Team Member &mdash; <span>February 2011&ndash;May 2011</span></p>
+        <p>Conducted weekly wine tastings events and cash account reconciliation</p>
       </li>
       <li class="work-exp-li">
         <h3>Primary Residential Mortgage, Inc.</h3>
-        <p>Loan Processor &mdash; <span>2003&ndash;January 2011</span></p>
-        <ul>
+        <p class="title">Loan Processor &mdash; <span>2003&ndash;January 2011</span></p>
+        <ul class="prmi-ul">
           <li>
-            &ndash; Collaborated with Account Executives, Loan Officers and all levels of Management
+            <p>
+              Collaborated with Account Executives, Loan Officers and all levels of Management
+            </p>
           </li>
           <li>
-            &ndash; Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow
+            <p>
+              Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow
+            </p>
           </li>
           <li>
-            	&ndash; Monitored and adapted to new industry regulations with immediate application for loan quality
+            <p>
+              Monitored and adapted to new industry regulations with immediate application for loan quality
+            </p>
           </li>
         </ul>
       </li>
       </ul>
+  </div>
+  <div class="education">
+    <h2>EDUCATION:</h2>
+    <ul>
+      <li class="education-li">
+        <h3>General Assembly</h3>
+        <p>Web Development Immersive, 2015</p>
+      </li>
+      <li  class="education-li">
+        <h3>George Mason University</h3>
+        <p>Web Design and Development, 2014</p>
+      </li>
+      <li class="education-li">
+        <h3>Virginia Wesleyan College</h3>
+        <p>B.A. Business &ndash; Concentration in Marketing 2003</p>
+      </li>
+    </ul>
   </div>
   <h2>INTERESTS:</h2>
   <p>Chess, Reading, Writing, Architecture, Sports, Photography, Gardening and amateur handyman</p>
