--- a/portfolio.html
+++ b/portfolio.html
@@ -6,23 +6,17 @@ permalink: /portfolio/
 <section class="section-about">
   <div class="about-row">
     <div class="project">
-      <div class="project-pic">
-        <img src="/images/memory.png" alt="Memory Project">
-      </div>
+      <h3 id="memory">Memory</h3>
       <a href="http://ryan-321.github.io/Memory/">
-        <h3>Memory</h3>
+        <img src="/images/memory.png" alt="Memory Project">
       </a>
       <a href="https://github.com/Ryan-321/Memory">
         <p>Github Repo</p>
       </a>
     </div>
-
     <div class="project">
-      <div class="project-pic">
-        <img src="/images/recipeB.png" alt="Recipe Box Project">
-      </div>
       <a href="https://wdi-recipe-box.herokuapp.com/">
-        <h3>Recipe Box</h3>
+        <img src="/images/recipeB.png" alt="Recipe Box Project" />
       </a>
       <a href="https://github.com/Ryan-321/recipe_box">
         <p>Github Repo</p>
@@ -32,11 +26,8 @@ permalink: /portfolio/
 
   <div class="about-row">
     <div class="project">
-      <div class="project-pic">
-        <img src="/images/trip.png" alt="Trip.me Project">
-      </div>
       <a href="https://trip-me.herokuapp.com/">
-        <h3>Trip.me</h3>
+        <img src="/images/trip.png" alt="Trip.me Project">
       </a>
         <a href="https://github.com/alexbannon/trip.me">
           <p>Github Repo</p>
@@ -44,11 +35,8 @@ permalink: /portfolio/
     </div>
 
     <div class="project">
-      <div class="avengers project-pic">
-        <img src="/images/avengers.png" alt="Avengers Bootstrap Project">
-      </div>
       <a href="https://avengersrails.herokuapp.com">
-        <h3>Avengers Bootstrap</h3>
+        <img src="/images/avengers.png" alt="Avengers Bootstrap Project">
       </a>
       <a href="https://github.com/Ryan-321/avengers-bootstrap">
         <p>Github Repo</p>
