--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@ layout: default
 ---
 <div class="section-main">
   <div class="section-main-layer">
+    <img src="/images/logo-white.png" alt="JR Logo">
+    <p id="tagline">
+      A Web Developer, creator, adventurer and individual <br>
+      with a deep love for for Coffee.
+    </p>
   </div>
 </div>
-
 <div class="section-action">
   <div class="section-action-child-left">
-      <a href="resume">Resume</a>
+      <a href="resume">View Resume</a>
   </div>
   <div class="section-action-child-right">
-      <a href="portfolio">Portfolio</a>
+      <a href="portfolio">View Portfolio</a>
   </div>
 </div>
 
 <div class="section-meet">
   <div class="section-meet-layer">
+    <img src="/images/logo-white.png" alt="JR Logo">
     <p>
-      Hello, my name is Ryan Kahle and am a graduate of General Assembly's Web Development
-      Immersive course.  I live a few minutes away from our nations capital where I like
-       to keep an eye on things.  Besides being omnipresent in DC, I have started
-       to learn the game of golf, which has been a great mistake.
+      Hello, my name is Ryan Kahle and am a graduate of General Assembly's Web Development Immersive course.  I live a few minutes away from our nations capital so I can keep an eye on things.  Besides being omnipresent in DC, I
+      am a father of one and married the girl I took to prom.
     </p>
     <a href="about">Learn More</a>
   </div>
