--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@ permalink: /resume/
         <h3>Languages &amp; Frameworks:</h3>
         <aside>
           <p>
-            Ruby, Rails, Sinatra, JavaScript, Express, jQuery, HTML5, CSS3, Sass, Bootstrap, Photoshop, Affinity, Angular, Wordpress, PHP
+            Ruby, Rails, Sinatra, JavaScript, Express, jQuery, HTML5, CSS3, Sass, Bootstrap, Photoshop, Affinity, Angular, PHP
           </p>
         </aside>
       </li>
@@ -31,7 +31,7 @@ permalink: /resume/
         <h3>Management &amp; Deployment:</h3>
         <aside>
           <p>
-            RSpec, Git, GitHub, Heroku, Command Line
+            RSpec, Git, GitHub, Heroku, Wordpress, Jekyll, Command Line
           </p>
         </aside>
       </li>
@@ -105,7 +105,7 @@ permalink: /resume/
       </li>
       <li class="education-li">
         <h3>Virginia Wesleyan College</h3>
-        <p>B.A. Business &ndash; Concentration in Marketing 2003</p>
+        <p>B.A. Business &ndash; Concentration in Marketing, 2003</p>
       </li>
     </ul>
   </div>
