updated color scheme

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ permalink: /about/
   <div class="about-main-right">
     <p>
       I got interested in Web Development after looking for a career switch
-      and asking myself what I really wanted.  My answers: to learn a craft, build things(!), work with passionate people, give back and be creative. This site contains some of my past projects and experiences with technology.  I used Jekyll as the delivery for this site, but wrote all the code myself.
+      and asking myself what I really wanted.  My answers: to learn a craft, build things(!), work with passionate people, give back and be creative. This site contains some of my past projects and experiences with technology.  I used Jekyll as the delivery system for this site, but wrote all the code myself.
     </p>
     <p>
       I have been trained as a Full-Stack developer and am interested in all the intricacies of programming(expecially JavaScript), but I also have a strong pull towards design.  My mission is to follow my instincts and continue to delve into programming while producing beautiful designs with well thought out code.  If you would like to get a hold of me, my info is below.
