--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
   <div class="section-meet-layer">
     <img src="/images/logo-white.png" alt="JR Logo">
     <p>
-      Hello, my name is Ryan Kahle and am a graduate of General Assembly's Web Development Immersive course.  I live a few minutes away from our nations capital so I can keep an eye on things.  Besides being omnipresent in DC, I
+      Hello, my name is Ryan Kahle and I am a graduate of General Assembly's Web Development Immersive course.  I live a few minutes away from our nations capital keeping an eye on things.  Besides being omnipresent in DC, I
       am a father of one and married the girl I took to prom.
     </p>
     <a href="about">Learn More</a>
