--- a/index.html
+++ b/index.html
@@ -5,27 +5,17 @@ layout: default
   <div class="section-main-layer">
     <img src="/images/logo-white.png" alt="JR Logo">
     <p id="tagline">
-      A Web Developer, creator, adventurer and individual <br>
-      with a deep love for for Coffee.
+      A fun loving Web Developer, curious creator, tireless adventurer and individual with a deep love for for Coffee.
     </p>
+    <a href="about">Learn More</a>
   </div>
 </div>
-<div class="section-action">
-  <div class="section-action-child-left">
-      <a href="resume">View Resume</a>
-  </div>
-  <div class="section-action-child-right">
-      <a href="portfolio">View Portfolio</a>
-  </div>
-</div>
-
-<div class="section-meet">
+<!-- <div class="section-meet">
   <div class="section-meet-layer">
     <img src="/images/logo-white.png" alt="JR Logo">
     <p>
       Hello, my name is Ryan Kahle and I am a graduate of General Assembly's Web Development Immersive course.  I live a few minutes away from our nations capital keeping an eye on things.  Besides being omnipresent in DC, I
       am a father of one and married the girl I took to prom.
     </p>
-    <a href="about">Learn More</a>
   </div>
-</div>
+</div> -->
