updated logo & content

--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,10 @@ permalink: /resume/
 ---
 <div class="resume-wrapper">
   <div class="objective">
-    <h2>OBJECTIVE</h2>
+    <h2>SUMMARY</h2>
     <p>Strong ability to prioritize and manage time on projects and follow a natural workflow with a methodical and systematic approach. Collaborative and adaptable in an effort to maintain an agile process while embracing the changes in technology and the opinions of others. Passionate about writing scalable and well-thought out code with an emphasis on user experience and front-end technologies to meet and exceed goals.</p>
   </div>
+
   <div class="skills">
     <h2>TECH SKILLS:</h2>
     <ul>
