--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ permalink: /about/
       and asking myself what I really wanted.  My answers: to learn a craft, build things(!), work with passionate people, give back and be creative. This site contains some of my past projects and experiences with technology.  I used Jekyll as the delivery system for this site, but wrote all the code myself.
     </p>
     <p>
-      As a recent graduate of General Assembly's Web Development Immersive course I have been trained as a Full-Stack developer. I am interested in all the intricacies of programming(expecially JavaScript), but I also have a strong pull towards design.  My mission is to follow my instincts and continue to delve into programming while producing beautiful designs with well thought out code.  If you would like to get a hold of me, my info is below.
+      As a recent graduate of General Assembly's Web Development Immersive course, I have been trained as a Full-Stack developer. I am interested in all the intricacies of programming(expecially JavaScript), but I also have a strong pull towards design.  My mission is to follow my instincts and continue to delve into programming while producing beautiful designs with well thought out code.  If you would like to learn more about I how can contribute to your team, please reach out to my e-mail below.
     </p>
   </div>
 </div>
