--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="section-main">
   <div class="section-main-layer">
-    <img src="/images/logo-white.png" alt="JR Logo">
+    <img src="/images/logo-100.png" alt="JR Logo">
     <p id="tagline">
       A fun loving Web Developer, curious creator, tireless adventurer and individual with a deep love for for Coffee.
     </p>
