fixed the two fors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <div class="section-main-layer">
     <img src="/images/logo-100.png" alt="JR Logo">
     <p id="tagline">
-      A fun loving Web Developer, curious creator, tireless adventurer and individual with a deep love for for Coffee.
+      A fun loving Web Developer, curious creator, tireless adventurer and individual with a deep love for Coffee.
     </p>
     <a href="about">Learn More</a>
   </div>
