--- a/portfolio.html
+++ b/portfolio.html
@@ -42,4 +42,14 @@ permalink: /portfolio/
       </a>
     </div>
   </div>
+  <div class="about-row">
+    <div class="project">
+      <a href="http://ryan-321.github.io/tripz">
+        <img src="/images/tripz.png" alt="Tripz Project" />
+      </a>
+      <a href="https://github.com/Ryan-321/tripz">
+        <p>Github Repo</p>
+      </a>
+    </div>
+  </div>
 </section>
