--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@ permalink: /portfolio/
   <div class="about-row">
     <div class="project">
       <a href="http://ryan-321.github.io/Memory/">
-        <img src="/images/memory.png" alt="Memory Project">
+        <img src="/images/concentration.png" alt="Memory Project">
       </a>
       <a href="https://github.com/Ryan-321/Memory">
         <p>Github Repo</p>
