added new avengers

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,6 @@ permalink: /portfolio/
 <section class="section-about">
   <div class="about-row">
     <div class="project">
-      <a href="http://ryan-321.github.io/Memory/">
-        <img src="/images/concentration.png" alt="Memory Project">
-      </a>
-      <a href="https://github.com/Ryan-321/Memory">
-        <p>Github Repo</p>
-      </a>
-    </div>
-    <div class="project">
       <a href="https://wdi-recipe-box.herokuapp.com/">
         <img src="/images/recipeB.png" alt="Recipe Box Project" />
       </a>
@@ -21,33 +13,42 @@ permalink: /portfolio/
         <p>Github Repo</p>
       </a>
     </div>
-  </div>
-
-  <div class="about-row">
     <div class="project">
       <a href="https://trip-me.herokuapp.com/">
         <img src="/images/trip.png" alt="Trip.me Project">
       </a>
-        <a href="https://github.com/alexbannon/trip.me">
-          <p>Github Repo</p>
-        </a>
-    </div>
-
-    <div class="project">
-      <a href="https://avengersrails.herokuapp.com">
-        <img src="/images/avengers.png" alt="Avengers Bootstrap Project">
-      </a>
-      <a href="https://github.com/Ryan-321/avengers-bootstrap">
+      <a href="https://github.com/alexbannon/trip.me">
         <p>Github Repo</p>
       </a>
     </div>
   </div>
+
   <div class="about-row">
+    <div class="project">
+      <a href="http://ryan-321.github.io/Memory/">
+        <img src="/images/concentration.png" alt="Memory Project">
+      </a>
+      <a href="https://github.com/Ryan-321/Memory">
+        <p>Github Repo</p>
+      </a>
+    </div>
+
     <div class="project">
       <a href="http://ryan-321.github.io/tripz">
         <img src="/images/tripz.png" alt="Tripz Project" />
       </a>
       <a href="https://github.com/Ryan-321/tripz">
+        <p>Github Repo</p>
+      </a>
+    </div>
+  </div>
+
+  <div class="about-row">
+    <div class="project">
+      <a href="http://ryan-321.github.io/avengers/">
+        <img src="/images/avengers.png" alt="Avengers Project" />
+      </a>
+      <a href="https://github.com/Ryan-321/avengers">
         <p>Github Repo</p>
       </a>
     </div>
