--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ permalink: /resume/
         <h3>Databases:</h3>
         <aside>
           <p>
-            Postgresql
+            MySql, Postgresql, Mongo
           </p>
         </aside>
       </li>
@@ -24,7 +24,7 @@ permalink: /resume/
         <h3>Languages &amp; Frameworks:</h3>
         <aside>
           <p>
-            Ruby, Rails, Sinatra, JavaScript, Express, jQuery, HTML5, CSS3, Sass, Bootstrap, Photoshop, Affinity, Angular, PHP
+            Ruby, Rails, Rspec, JavaScript, Express, jQuery, HTML5, CSS3, Sass, Bootstrap, SQL
           </p>
         </aside>
       </li>
@@ -32,7 +32,7 @@ permalink: /resume/
         <h3>Management &amp; Deployment:</h3>
         <aside>
           <p>
-            RSpec, Git, GitHub, Heroku, Wordpress, Jekyll, Command Line
+            Git, GitHub, Heroku, Wordpress, Jekyll, Command Line
           </p>
         </aside>
       </li>
@@ -40,7 +40,7 @@ permalink: /resume/
         <h3>Methodologies:</h3>
         <aside>
           <p>
-            OOP, MVC,TDD, Responsive Design, ERDs, User Stories, SCRUM, Wire-framing, Agile Development
+            OOP, MVC,TDD, Responsive Design, ERDs, User Interfaces Design, Data Analysis
           </p>
         </aside>
       </li>
