--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 ---
-layout: default
+layout: landing
 ---
 
 
 <div class="section-main">
   <div class="section-main-layer">
-    <img src="/images/logo-100.png" alt="JR Logo">
-    <p id="tagline">
-      A fun loving Web Developer, curious creator, tireless adventurer and individual with a deep love for Coffee.
-    </p>
-    <a href="about">Learn More</a>
+    <div class="main-display">
+      <h1 class="animate enter_left">< J. Ryan Kahle /></h1>
+
+      <h3 class="animate enter_right">Web Developer</h3>
+      <a href="about" class="learn_more">Learn More</a>
+    </div>
   </div>
 </div>
