--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ permalink: /resume/
         <h3>Databases:</h3>
         <aside>
           <p>
-            MySql, Postgresql, Mongo
+            MySql, Postgresql
           </p>
         </aside>
       </li>
@@ -24,7 +24,7 @@ permalink: /resume/
         <h3>Languages &amp; Frameworks:</h3>
         <aside>
           <p>
-            Ruby, Rails, Rspec, JavaScript, Express, jQuery, HTML5, CSS3, Sass, Bootstrap, SQL
+            Ruby, Rails, JavaScript, React, jQuery, HTML5, CSS3, Sass, Bootstrap, SQL
           </p>
         </aside>
       </li>
@@ -32,7 +32,7 @@ permalink: /resume/
         <h3>Management &amp; Deployment:</h3>
         <aside>
           <p>
-            Git, GitHub, Heroku, Wordpress, Jekyll, Command Line
+            Git, GitHub, Heroku, Wordpress, Jekyll, CLI
           </p>
         </aside>
       </li>
@@ -40,7 +40,7 @@ permalink: /resume/
         <h3>Methodologies:</h3>
         <aside>
           <p>
-            OOP, MVC,TDD, Responsive Design, ERDs, User Interfaces Design, Data Analysis
+            OOP, MVC, TDD, Responsive Design, UI Design, Data Analysis
           </p>
         </aside>
       </li>
@@ -50,44 +50,64 @@ permalink: /resume/
     <h2>WEB DEVELOPMENT EXPERIENCE</h2>
     <h3>General Assembly, Web Development Immersive</h3>
     <p>Full-stack web development program focused on common best practices in object-oriented programming, MVC frameworks, data modeling, and test-driven development.</p>
-    <p><a href="/../portfolio">Please see Portfolio to view projects</a></p>
   </div>
   <div class="work-experience">
     <h2>WORK EXPERIENCE</h2>
     <ul>
       <li class="work-exp-li">
+        <h3>Eagleforce and Associates</h3>
+        <p class="title">Jr. Software Engineer &mdash; <span>May 2016&ndash;Present</span></p>
+        <ul>
+          <li>
+            Creating Full-Stack Applications in a Ruby on Rails Environment
+          </li>
+          <li>
+            API Integration
+          </li>
+          <li>
+            Configure and Maintain Database Schemas for Projects
+          </li>
+        </ul>
+      </li>
+      <li class="work-exp-li">
         <h3>Randstad Managed Services </h3>
         <p class="title">Document Processor &mdash; <span>May 2014&ndash;September 2014</span></p>
-        <p>Merged Salesforce accounts with K-12 software </p>
+        <ul>
+          <li>
+            Merged Salesforce accounts with K-12 software
+          </li>
+        </ul>
       </li>
       <li class="work-exp-li">
         <h3>Republic National Distributing Co.</h3>
         <p class="title">Merchandiser &mdash; <span>May 2011&ndash;April 2014</span></p>
-        <p>Maintained relationships with store managers and employees, organized deliveries and promotions</p>
+        <ul>
+          <li>
+            Maintained relationships with store managers and employees, organized deliveries and promotions
+          </li>
+        </ul>
       </li>
       <li class="work-exp-li">
         <h3>Red, White, and Bleu</h3>
         <p class="title">Team Member &mdash; <span>February 2011&ndash;May 2011</span></p>
-        <p>Conducted weekly wine tastings events and cash account reconciliation</p>
+        <ul>
+          <li>
+            Conducted weekly wine tastings events and cash account reconciliation
+          </li>
+        </ul>
       </li>
       <li class="work-exp-li">
         <h3>Primary Residential Mortgage, Inc.</h3>
         <p class="title">Loan Processor &mdash; <span>2003&ndash;January 2011</span></p>
         <ul class="prmi-ul">
           <li>
-            <p>
               Collaborated with Account Executives, Loan Officers and all levels of Management
-            </p>
           </li>
           <li>
-            <p>
               Maintained a heavy pipeline with varying deadlines by prioritizing daily work flow
-            </p>
           </li>
           <li>
-            <p>
               Monitored and adapted to new industry regulations with immediate application for loan quality
-            </p>
           </li>
         </ul>
       </li>
