--- a/portfolio.html
+++ b/portfolio.html
@@ -14,17 +14,6 @@ permalink: /portfolio/
       </a>
     </div>
     <div class="project">
-      <a href="https://trip-me.herokuapp.com/">
-        <img src="/images/trip.png" alt="Trip.me Project">
-      </a>
-      <a href="https://github.com/alexbannon/trip.me">
-        <p>Github Repo</p>
-      </a>
-    </div>
-  </div>
-
-  <div class="about-row">
-    <div class="project">
       <a href="http://ryan-321.github.io/Memory/">
         <img src="/images/concentration.png" alt="Memory Project">
       </a>
@@ -32,24 +21,11 @@ permalink: /portfolio/
         <p>Github Repo</p>
       </a>
     </div>
-
-    <div class="project">
-      <a href="http://ryan-321.github.io/tripz">
-        <img src="/images/tripz.png" alt="Tripz Project" />
-      </a>
-      <a href="https://github.com/Ryan-321/tripz">
-        <p>Github Repo</p>
-      </a>
-    </div>
   </div>
-
-  <div class="about-row">
+  <div class='about-row'>
     <div class="project">
-      <a href="http://ryan-321.github.io/avengers/">
-        <img src="/images/avengers.png" alt="Avengers Project" />
-      </a>
-      <a href="https://github.com/Ryan-321/avengers">
-        <p>Github Repo</p>
+      <a href="http://lemoncellobtq.com/">
+        <img src="/images/lemoncello.png" alt="Lemoncello Website" />
       </a>
     </div>
   </div>
