updated about page paragraphs

--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@ permalink: /about/
   <div class="about-main-right">
     <p>
       I got interested in Web Development after looking for a career switch
-      and asking myself what I really wanted.  My answers: to learn a craft, build things(!), work with passionate people, give back and be creative. This site contains some of my past projects and experiences with technology.  I used Jekyll as the delivery system for this site, but wrote all the code myself.
+      and asking myself what I really wanted.  My answers: to learn a craft, build things(!), work with passionate people, give back and be creative. This site contains some of my past projects and experiences with technology.
     </p>
     <p>
-      As a recent graduate of General Assembly's Web Development Immersive course, I have been trained as a Full-Stack developer. I am interested in all the intricacies of programming(expecially JavaScript), but I also have a strong pull towards design.  My mission is to follow my instincts and continue to delve into programming while producing beautiful designs with well thought out code.  If you would like to learn more about I how can contribute to your team, please reach out to my e-mail below.
+      I am a trained full-stack developer via General Assembly's Web Development Immersive course and have been honing my craft at my current job, which is in a Ruby on Rails and MySql environment.  My current side project is learning react, its tools and how and when to implement it. If you would like to learn more about I how can contribute to your team, please reach out to my e-mail below.
     </p>
   </div>
 </div>
