added weatherapi project

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,18 @@ permalink: /portfolio/
   </div>
   <div class='about-row'>
     <div class="project">
+      <a href="http://peaceful-stream-87480.herokuapp.com">
+        <img src="/images/api.png" alt="Weather API Website" />
+      </a>
+      <a href="https://github.com/Ryan-321/weatherAPI">
+        <p>Github Repo</p>
+      </a>
+    </div>
+    <div class="project">
       <a href="http://lemoncellobtq.com/">
         <img src="/images/lemoncello.png" alt="Lemoncello Website" />
       </a>
+      <p>Wordpress Site</p>
     </div>
   </div>
 </section>
